# fastapi-template

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/: .env.example  alembic.ini  database.py  logger.py  main.py  middleware.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 65b171b9cc3a_initial.py  e38fa223f58e_add_user_relationship.py  e7b262224b03_add_users.py
src/features/auth/: bearer.py
src/features/common/: pagination.py  query.py
src/features/todos/: models.py  routes.py  services.py
src/features/todos/schemas/: base.py  relational.py
src/features/users/: models.py  routes.py  services.py
src/features/users/schemas/: base.py
tests/: conftest.py  test_todos.py  test_users.py
